Added Catalina patch, and updated README description.